Fix size of player card container so they wrap properly

--- a/src/app/components/player/player.scss
+++ b/src/app/components/player/player.scss
@@ -103,6 +103,7 @@
 		@include clearfix;
 
 		float: left;
+		width: 70%;
 
 		.cards-group {
 			@extend %playing-cards;
